# public-PROD-SBER.Tech-bank-backend

./: .gitignore  Dockerfile  extract-openapi.py  openapi.yaml  pyproject.toml
server/: __init__.py  __main__.py  config.py  entities.py  exceptions.py  schemas.py
server/db/: models.py  repo.py
server/routers/: admin.py  clients.py  meetings.py  operations.py  representatives.py
